--- a/2018/src/scss/main.scss
+++ b/2018/src/scss/main.scss
@@ -2740,7 +2740,9 @@ a.confcal-button-inactive {
 }
 
 .room-list {
-
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
   li {
     display: none;
 
@@ -2750,7 +2752,15 @@ a.confcal-button-inactive {
   }  
 }
 
-#room-time-container{
+.room-entry-current {
+  flex: 4;
+}
+
+.room-entry-before,.room-entry-after {
+  flex: 1;
+}
+
+#room-time-container {
   width: 100%;
   display: flex;
   position: sticky;
@@ -2762,4 +2772,13 @@ a.confcal-button-inactive {
   font-size: 1.5em;
   text-shadow: rgb(255, 255, 255) 3px 0px 0px, rgb(255, 255, 255) 2.83487px 0.981584px 0px, rgb(255, 255, 255) 2.35766px 1.85511px 0px, rgb(255, 255, 255) 1.62091px 2.52441px 0px, rgb(255, 255, 255) 0.705713px 2.91581px 0px, rgb(255, 255, 255) -0.287171px 2.98622px 0px, rgb(255, 255, 255) -1.24844px 2.72789px 0px, rgb(255, 255, 255) -2.07227px 2.16926px 0px, rgb(255, 255, 255) -2.66798px 1.37182px 0px, rgb(255, 255, 255) -2.96998px 0.42336px 0px, rgb(255, 255, 255) -2.94502px -0.571704px 0px, rgb(255, 255, 255) -2.59586px -1.50383px 0px, rgb(255, 255, 255) -1.96093px -2.27041px 0px, rgb(255, 255, 255) -1.11013px -2.78704px 0px, rgb(255, 255, 255) -0.137119px -2.99686px 0px, rgb(255, 255, 255) 0.850987px -2.87677px 0px, rgb(255, 255, 255) 1.74541px -2.43999px 0px, rgb(255, 255, 255) 2.44769px -1.73459px 0px, rgb(255, 255, 255) 2.88051px -0.838247px 0px;
   padding: 0.1em 0.5em;
+}
+
+.room-image {
+  height: 300px;
+  width: 300px;
+  background-clip: content-box;
+  background-size: cover;
+  background-position: center;
+  border-radius: 50%;
 }
