--- a/2018/src/scss/main.scss
+++ b/2018/src/scss/main.scss
@@ -2742,32 +2742,38 @@ a.confcal-button-inactive {
 .room-list {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  position: absolute;
+  top: 0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
   li {
     display: none;
-
     &.room-entry-before, &.room-entry-after, &.room-entry-current {
-      display: list-item;
+      display: flex;
+      overflow: hidden;
+      position: relative;
     }
   }  
 }
 
 .room-entry-current {
-  flex: 4;
+  flex-grow: 8;
 }
 
 .room-entry-before {
-  position: relative;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0.5;
-  transition: .3s ease;
-  background-color:#b3b3b3;
-  z-index: 1;
+  // position: relative;
+  // top: 0;
+  // bottom: 0;
+  // left: 0;
+  // right: 0;
+  // height: 100%;
+  // width: 100%;
+  // opacity: 0.5;
+  // transition: .3s ease;
+  // background-color:#b3b3b3;
+  // z-index: 1;
 }
 .room-entry-before,.room-entry-after {
   flex: 1;
@@ -2789,8 +2795,8 @@ a.confcal-button-inactive {
 }
 
 .room-image {
-  height: 200px;
-  width: 200px;
+  height: 100%;
+  width: 20%;
   background-clip: content-box;
   background-size: cover;
   background-position: center;
