Adding clear background to page.

--- a/2018/src/html/room.ejs
+++ b/2018/src/html/room.ejs
@@ -14,7 +14,7 @@ var page = {
     <title>Room</title>
     <link rel="stylesheet" href="main.css">
 </head>
-<body>
+<body class="room-page">
         <div id="room-time-container">
              <div id="room-time" class="room-time"></div>
         </div>
