--- a/2018/src/scss/main.scss
+++ b/2018/src/scss/main.scss
@@ -2739,6 +2739,10 @@ a.confcal-button-inactive {
   }
 }
 
+.room-page {
+  background: #eada96;
+}
+
 .room-list {
   display: flex;
   flex-direction: column;
